# lib/controllers/post.js
@@ -1,19 +1,36 @@
-const mongoose = require("mongoose");
 const Post = require("../model/Post");
 
 module.exports = {
     createPost: async function (req, res, next) {
-        /*  
-            #swagger.tags = ['Post']
-            #swagger.summary = '//IMPLEMENTAR'
-            #swagger.description = '//IMPLEMENTAR'
-            #swagger.parameters = [
-                {userProfile: 'Luiggi', type: 'String'},
-                
-            ]
-        */
+        /**
+         * #swagger.tags = ["Post"]
+         * #swagger.summary = 'Criando um Post'
+             #swagger.parameters['Post'] = { 
+                in: 'body', 
+                description: 'Esse obj add um comment no banco de dados', 
+                required: true, 
+                schema: { 
+                    profileObjectID: "63703f1de318f3ffa792dde4", 
+                    postMedia: [
+                        "https://images.pexels.com/photos/1000739/pexels-photo-1000739.jpeg",
+                        "https://images.pexels.com/photos/6964129/pexels-photo-6964129.jpeg"
+                    ],
+                    postDate: Date(),
+                    numberOfLikes: 0,
+                    numberOfReposts: 0,
+                    numberOfComments: 0,
+                    comments: []
+                } 
+            }
+         */
 
-        res.status(200).json({ msg: "Post ok" });
+        try {
+            //IMPLEMENTAR verificar se profileObjectId existe ( quem esta postando )
+            let newPost = await Post.create(Post(req.body));
+            res.status(200).json(newPost);
+        } catch (error) {
+            res.status(500).json(error);
+        }
     },
     getAllPosts: async function (req, res, next) {
         /*  
