# lib/routes/comment.js
@@ -1,19 +1,10 @@
 const express = require("express");
 const router = express.Router();
 
-const controller = require("../controllers/comment");
+const controllerComment = require("../controllers/comment");
+const controllerSubComment = require("../controllers/subComment");
 
-router.post("/", controller.createComment);
-router.post("/addSubComment/:_id", controller.addSubComment);
-router.get("/:_id", controller.getCommentByID);
-router.get(
-    "/getAllSubCommentCommentById/:_id",
-    controller.getAllSubCommentCommentById
-);
-router.delete(
-    "/deleteSubCommentByIDs/:_idComment/:_idSubComment",
-    controller.deleteSubCommentByIDs
-);
-router.delete("/deleteCommentByID/:_id", controller.deletarCommentByID);
+router.post("/", controllerComment.createComment);
+router.post("/createSubComment", controllerSubComment.createSubComment);
 
 module.exports = router;
